# fpga-gpu

./: .gitattributes  .gitignore  README.md  TB_behav.wcfg  build.tcl  create.tcl  fpga-gpu.drawio  fpga-gpu.tcl  graphics_card.tcl
constrs/: Basys3_Master.xdc  Timings.xdc
docs/: tiny_gpu.drawio
lib/: CMakeLists.txt  CMakePresets.json  README.md
lib/cmake/: FindD2XX.cmake
lib/examples/: CMakeLists.txt  hello_gpu.c
lib/include/: fgl.h
lib/src/: fgl.c
scripts/: hex_image_converter.py  image_to_mem.py
sim/: TB.sv  TB_behav.wcfg  TB_macro_collection.vh  TB_task_collection.vh  tb_uart.sv  tb_vga_controller.sv
src/: baud_gen.sv  clockgate.sv  display_engine.sv  dut.sv  global_reset.sv  gpu.sv  input_sync.sv  nearest_upscaler_2x.sv  reset_sync.sv  seven_seg_driver.sv  seven_segment_translator.sv  uart.sv  uart_io.sv  uart_rx.sv  uart_tx.sv  upscaler2x.sv  vga_controller.sv  vga_io.sv
src/ip/blk_mem_gen_0/: blk_mem_gen_0.xci
src/ip/clk_wiz_0/: clk_wiz_0.xci
xlsx/: CVT v2.1 Generator V1 ALT MIN VBLK.xlsx
